test/types/type_variables/deitz/part7/construct-1b.good
construct-1b.chpl:6: error: unresolved type specifier 'R(t=type real(64), x="deitz was here")'
construct-1b.chpl:1: note: this candidate did not match: R(type t)
construct-1b.chpl:6: note: because call uses named argument x
construct-1b.chpl:1: note: but function contains no formal named x
